roles/k8s-install-elk/templates/0elk-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: elk
