roles/k8s-install-elk/templates/gaussdb-check-logstash.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaussdb-check-logstash
  namespace: elk
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: gaussdb-check-logstash
    spec:
      containers:
        - name: logstash
          image: "192.168.160.47:8888/public/logstash:7.13.2"
          imagePullPolicy: Always
          resources:
            limits:
              memory: '4Gi'
              cpu: '8'
            requests:
              memory: '500Mi'
              cpu: '1'
          volumeMounts:
            - name: gaussdb-check-logstash-pipeline
              mountPath: /usr/share/logstash/pipeline
            - name: gaussdb-check-logstash-config
              mountPath: /usr/share/logstash/config/logstash.yml
              subPath: logstash.yml
      volumes:
        - name: gaussdb-check-logstash-config
          configMap:
            name: gaussdb-check-logstash-config
        - name: gaussdb-check-logstash-pipeline
          configMap:
            name: gaussdb-check-logstash-pipeline
      securityContext:
        runAsUser: 0
        fsGroup: 1000
  selector:
    matchLabels:
      app: gaussdb-check-logstash
