roles/k8s-install-elk/templates/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: elk
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`kibana.cicem.fa`)
      services:
        - name: kibana
          port: 5601
